--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node testmongo.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongodb": "^5.1.0"
   },
